Issue #92 : fix overflow ios and write title if no poster found

--- a/src/app/pages/player/about-epoc/about-epoc.page.scss
+++ b/src/app/pages/player/about-epoc/about-epoc.page.scss
@@ -107,6 +107,9 @@ ion-text{
   margin: 2vh auto;
   border: 2px solid var(--ion-color-inria-blue);
   border-radius: 10px;
+  overflow: hidden;
+  // hack to fix overflow hidden safari
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
 }
 
 .start-course {
